service/clusterip.yml
apiVersion: v1
kind: Service
metadata:  
  name: nginx-clusterip-service
spec:
  selector: 
    app: salesapp
  type: ClusterIP
  ports:  
  - name: http
    port: 9080
    targetPort: 80
    protocol: TCP
