service/nodeport-access-outside-cluster.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "msteams-service"
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
---
apiVersion: "v1"
kind: "Endpoints"
metadata:
  name: "msteams-service"
subsets:
  - addresses:
      - ip: <remote m/c ip>
    ports:
      - port: 8080
---
